--- a/01_introduccion_a_django.ipynb
+++ b/01_introduccion_a_django.ipynb
@@ -30,7 +30,7 @@
     "* Cuenta con un *ORM* (Object Relational Mapper) avanzado.\n",
     "* Utiliza plantillas (templates) para desplegar aplicaciones.\n",
     "* Soporta múltipes idiomas.\n",
-    "* Diseñado para aprovechar el paradigma de desarrollo basado en pruebas (*TDD*).\n",
+    "* Diseñado para aprovechar el paradigma de desarrollo dirigido por pruebas (*TDD*).\n",
     "* Se apega al patrón [*MVC*](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador) mediante la implementación del concepto  \"Model View Template\".\n",
     "* Hace énfasis en la seguridad.\n",
     "* Es escalable.\n",
@@ -64,11 +64,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting django\n",
+      "  Downloading Django-3.1-py3-none-any.whl (7.8 MB)\n",
+      "\u001b[K     |████████████████████████████████| 7.8 MB 1.1 MB/s eta 0:00:01     |████████████████████▉           | 5.1 MB 1.1 MB/s eta 0:00:03\n",
+      "\u001b[?25hCollecting asgiref~=3.2.10\n",
+      "  Downloading asgiref-3.2.10-py3-none-any.whl (19 kB)\n",
+      "Collecting pytz\n",
+      "  Downloading pytz-2020.1-py2.py3-none-any.whl (510 kB)\n",
+      "\u001b[K     |████████████████████████████████| 510 kB 1.8 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting sqlparse>=0.2.2\n",
+      "  Downloading sqlparse-0.3.1-py2.py3-none-any.whl (40 kB)\n",
+      "\u001b[K     |████████████████████████████████| 40 kB 3.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: asgiref, pytz, sqlparse, django\n",
+      "Successfully installed asgiref-3.2.10 django-3.1 pytz-2020.1 sqlparse-0.3.1\n",
+      "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.2.2 is available.\n",
+      "You should consider upgrading via the '/home/oi/pythonista/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install django"
    ]
@@ -125,9 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/oi/pythonista/bin/django-admin\r\n"
+     ]
+    }
+   ],
    "source": [
     "!which django-admin"
    ]
@@ -141,18 +171,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r\n",
+      "Type 'django-admin help <subcommand>' for help on a specific subcommand.\r\n",
+      "\r\n",
+      "Available subcommands:\r\n",
+      "\r\n",
+      "\u001b[31m[django]\u001b[0m\r\n",
+      "    check\r\n",
+      "    compilemessages\r\n",
+      "    createcachetable\r\n",
+      "    dbshell\r\n",
+      "    diffsettings\r\n",
+      "    dumpdata\r\n",
+      "    flush\r\n",
+      "    inspectdb\r\n",
+      "    loaddata\r\n",
+      "    makemessages\r\n",
+      "    makemigrations\r\n",
+      "    migrate\r\n",
+      "    runserver\r\n",
+      "    sendtestemail\r\n",
+      "    shell\r\n",
+      "    showmigrations\r\n",
+      "    sqlflush\r\n",
+      "    sqlmigrate\r\n",
+      "    sqlsequencereset\r\n",
+      "    squashmigrations\r\n",
+      "    startapp\r\n",
+      "    startproject\r\n",
+      "    test\r\n",
+      "    testserver\r\n",
+      "\u001b[31mNote that only Django core commands are listed as settings are not properly configured (error: Requested setting INSTALLED_APPS, but settings are not configured. You must either define the environment variable DJANGO_SETTINGS_MODULE or call settings.configure() before accessing settings.).\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!django-admin help"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: django-admin startproject [-h] [--template TEMPLATE]\r\n",
+      "                                 [--extension EXTENSIONS] [--name FILES]\r\n",
+      "                                 [--version] [-v {0,1,2,3}]\r\n",
+      "                                 [--settings SETTINGS]\r\n",
+      "                                 [--pythonpath PYTHONPATH] [--traceback]\r\n",
+      "                                 [--no-color] [--force-color]\r\n",
+      "                                 name [directory]\r\n",
+      "\r\n",
+      "Creates a Django project directory structure for the given project name in the\r\n",
+      "current directory or optionally in the given directory.\r\n",
+      "\r\n",
+      "positional arguments:\r\n",
+      "  name                  Name of the application or project.\r\n",
+      "  directory             Optional destination directory\r\n",
+      "\r\n",
+      "optional arguments:\r\n",
+      "  -h, --help            show this help message and exit\r\n",
+      "  --template TEMPLATE   The path or URL to load the template from.\r\n",
+      "  --extension EXTENSIONS, -e EXTENSIONS\r\n",
+      "                        The file extension(s) to render (default: \"py\").\r\n",
+      "                        Separate multiple extensions with commas, or use -e\r\n",
+      "                        multiple times.\r\n",
+      "  --name FILES, -n FILES\r\n",
+      "                        The file name(s) to render. Separate multiple file\r\n",
+      "                        names with commas, or use -n multiple times.\r\n",
+      "  --version             show program's version number and exit\r\n",
+      "  -v {0,1,2,3}, --verbosity {0,1,2,3}\r\n",
+      "                        Verbosity level; 0=minimal output, 1=normal output,\r\n",
+      "                        2=verbose output, 3=very verbose output\r\n",
+      "  --settings SETTINGS   The Python path to a settings module, e.g.\r\n",
+      "                        \"myproject.settings.main\". If this isn't provided, the\r\n",
+      "                        DJANGO_SETTINGS_MODULE environment variable will be\r\n",
+      "                        used.\r\n",
+      "  --pythonpath PYTHONPATH\r\n",
+      "                        A directory to add to the Python path, e.g.\r\n",
+      "                        \"/home/djangoprojects/myproject\".\r\n",
+      "  --traceback           Raise on CommandError exceptions\r\n",
+      "  --no-color            Don't colorize the command output.\r\n",
+      "  --force-color         Force colorization of the command output.\r\n"
+     ]
+    }
+   ],
    "source": [
     "!django-admin help startproject"
    ]
@@ -193,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -270,9 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/oi/py201/tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -286,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,9 +431,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r\n",
+      "Type 'manage.py help <subcommand>' for help on a specific subcommand.\r\n",
+      "\r\n",
+      "Available subcommands:\r\n",
+      "\r\n",
+      "\u001b[31m[auth]\u001b[0m\r\n",
+      "    changepassword\r\n",
+      "    createsuperuser\r\n",
+      "\r\n",
+      "\u001b[31m[contenttypes]\u001b[0m\r\n",
+      "    remove_stale_contenttypes\r\n",
+      "\r\n",
+      "\u001b[31m[django]\u001b[0m\r\n",
+      "    check\r\n",
+      "    compilemessages\r\n",
+      "    createcachetable\r\n",
+      "    dbshell\r\n",
+      "    diffsettings\r\n",
+      "    dumpdata\r\n",
+      "    flush\r\n",
+      "    inspectdb\r\n",
+      "    loaddata\r\n",
+      "    makemessages\r\n",
+      "    makemigrations\r\n",
+      "    migrate\r\n",
+      "    sendtestemail\r\n",
+      "    shell\r\n",
+      "    showmigrations\r\n",
+      "    sqlflush\r\n",
+      "    sqlmigrate\r\n",
+      "    sqlsequencereset\r\n",
+      "    squashmigrations\r\n",
+      "    startapp\r\n",
+      "    startproject\r\n",
+      "    test\r\n",
+      "    testserver\r\n",
+      "\r\n",
+      "\u001b[31m[sessions]\u001b[0m\r\n",
+      "    clearsessions\r\n",
+      "\r\n",
+      "\u001b[31m[staticfiles]\u001b[0m\r\n",
+      "    collectstatic\r\n",
+      "    findstatic\r\n",
+      "    runserver\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python manage.py help"
    ]
@@ -353,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -432,6 +605,43 @@
     "\n",
     "**Nota:** \n",
     "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Watching for file changes with StatReloader\n",
+      "Performing system checks...\n",
+      "\n",
+      "System check identified no issues (0 silenced).\n",
+      "\u001b[31m\n",
+      "You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.\u001b[0m\n",
+      "\u001b[31mRun 'python manage.py migrate' to apply them.\u001b[0m\n",
+      "August 31, 2020 - 21:30:15\n",
+      "Django version 3.1, using settings 'tutorial.settings'\n",
+      "Starting development server at http://0.0.0.0:8000/\n",
+      "Quit the server with CONTROL-C.\n",
+      "[31/Aug/2020 21:30:45] \u001b[32m\"GET /admin HTTP/1.1\" 301 0\u001b[0m\n",
+      "[31/Aug/2020 21:30:45] \u001b[32m\"GET /admin/ HTTP/1.1\" 302 0\u001b[0m\n",
+      "[31/Aug/2020 21:30:45] \u001b[m\"GET /admin/login/?next=/admin/ HTTP/1.1\" 200 2194\u001b[0m\n",
+      "[31/Aug/2020 21:30:45] \u001b[m\"GET /static/admin/css/base.css HTTP/1.1\" 200 16307\u001b[0m\n",
+      "[31/Aug/2020 21:30:45] \u001b[m\"GET /static/admin/css/login.css HTTP/1.1\" 200 1185\u001b[0m\n",
+      "[31/Aug/2020 21:30:45] \u001b[m\"GET /static/admin/js/nav_sidebar.js HTTP/1.1\" 200 1360\u001b[0m\n",
+      "[31/Aug/2020 21:30:45] \u001b[m\"GET /static/admin/css/responsive.css HTTP/1.1\" 200 18617\u001b[0m\n",
+      "[31/Aug/2020 21:30:45] \u001b[m\"GET /static/admin/css/nav_sidebar.css HTTP/1.1\" 200 1789\u001b[0m\n",
+      "[31/Aug/2020 21:30:45] \u001b[36m\"GET /static/admin/fonts/Roboto-Light-webfont.woff HTTP/1.1\" 304 0\u001b[0m\n",
+      "[31/Aug/2020 21:30:45] \u001b[36m\"GET /static/admin/fonts/Roboto-Regular-webfont.woff HTTP/1.1\" 304 0\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python manage.py runserver 0.0.0.0:8000"
    ]
   },
   {
@@ -520,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
