--- a/02_internet_la_web_y_requests.ipynb
+++ b/02_internet_la_web_y_requests.ipynb
@@ -379,7 +379,7 @@
    "source": [
     "### Estructura de un mensaje de *HTTP*.\n",
     "\n",
-    "Los mensajes de *HTTP* son conjuntos de datos transsmitidos en formato binario en codificación [*ASCII*](https://es.wikipedia.org/wiki/ASCII).\n",
+    "Los mensajes de *HTTP* son conjuntos de datos transmitidos en formato binario en codificación [*ASCII*](https://es.wikipedia.org/wiki/ASCII).\n",
     "\n",
     "Tanto las peticiones como las respuestas tiene una estructura compuesta primordialmente por:\n",
     "\n",
@@ -542,7 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sitio = requests.get(\"https://www.pythonista.io/cursos/p101\")"
+    "sitio = requests.get(\"https://www.pythonista.io/cursos/py101\")"
    ]
   },
   {
@@ -1037,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
