--- a/03_configuracion_de_un_proyecto.ipynb
+++ b/03_configuracion_de_un_proyecto.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.DEBUG"
    ]
@@ -117,9 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2-)v-&!r5x-4ue6ubefpch%5s@8=7-*w_s#ya%@@*%hna@f)@('"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.SECRET_KEY"
    ]
@@ -135,9 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/opt/oi/py201/tutorial')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.BASE_DIR"
    ]
@@ -153,9 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tutorial.urls'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.ROOT_URLCONF"
    ]
@@ -171,9 +215,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'BACKEND': 'django.template.backends.django.DjangoTemplates',\n",
+       "  'DIRS': [],\n",
+       "  'APP_DIRS': True,\n",
+       "  'OPTIONS': {'context_processors': ['django.template.context_processors.debug',\n",
+       "    'django.template.context_processors.request',\n",
+       "    'django.contrib.auth.context_processors.auth',\n",
+       "    'django.contrib.messages.context_processors.messages']}}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.TEMPLATES"
    ]
@@ -193,9 +254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'default': {'ENGINE': 'django.db.backends.sqlite3',\n",
+       "  'NAME': PosixPath('/opt/oi/py201/tutorial/db.sqlite3')}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.DATABASES"
    ]
@@ -213,9 +286,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['django.contrib.admin',\n",
+       " 'django.contrib.auth',\n",
+       " 'django.contrib.contenttypes',\n",
+       " 'django.contrib.sessions',\n",
+       " 'django.contrib.messages',\n",
+       " 'django.contrib.staticfiles']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.INSTALLED_APPS"
    ]
@@ -233,9 +322,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['django.middleware.security.SecurityMiddleware',\n",
+       " 'django.contrib.sessions.middleware.SessionMiddleware',\n",
+       " 'django.middleware.common.CommonMiddleware',\n",
+       " 'django.middleware.csrf.CsrfViewMiddleware',\n",
+       " 'django.contrib.auth.middleware.AuthenticationMiddleware',\n",
+       " 'django.contrib.messages.middleware.MessageMiddleware',\n",
+       " 'django.middleware.clickjacking.XFrameOptionsMiddleware']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.MIDDLEWARE"
    ]
@@ -251,9 +357,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/static/'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.STATIC_URL"
    ]
@@ -269,9 +386,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tutorial.wsgi.application'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.WSGI_APPLICATION"
    ]
@@ -314,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
