--- a/05_urls_y_funciones_de_vista.ipynb
+++ b/05_urls_y_funciones_de_vista.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "La siguiente liga apunta a la documentación de referencian del paquete.\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/urls/"
+    "https://docs.djangoproject.com/en/3.1/ref/urls/"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   * En entornos Linux y MacOS X."
+    "* En entornos *GNU/Linux* y *MacOS X*."
    ]
   },
   {
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  * En entornos Windows."
+    "  * En entornos *Windows*."
    ]
   },
   {
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En entornos Linux y MacOS X."
+    "* En entornos *GNU/Linux* y *MacOS X*."
    ]
   },
   {
@@ -353,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  * En entornos Windows."
+    "  * En entornos *Windows*."
    ]
   },
   {
@@ -467,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En entornos Linux o MacOS X."
+    "* En entornos *GNU/Linux* y *MacOS X*."
    ]
   },
   {
@@ -483,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En entornos Windows."
+    "* En entornos *Windows*."
    ]
   },
   {
@@ -519,7 +519,9 @@
     "\n",
     "Este paquete contiene un conjunto de herramientas capaces de desplegar una aplicación de administración de un proyecto de *Django*.\n",
     "\n",
-    "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/3.0/ref/contrib/admin/\n",
+    "La documentación de este paquete puede ser consultada en:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/3.1/ref/contrib/admin/\n",
     "\n",
     "**Notas:**\n",
     "* Aún cuando esta la aplicación de administración es habilitada automáticamente al momento en el que se crea un proyecto, puede ser un recurso opcional.\n",
@@ -530,23 +532,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En entornos Linux y MacOS X."
+    "## Arranque del servicio web."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Arranque desde la *notebook*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python manage.py runserver 0.0.0.0:8000"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Arranque desde una terminal.\n",
+    "**Nota:** Es necesario interrumpir el *kernel* de la *notebook* para terminar la ejecución del servidor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arranque desde una terminal.\n",
     "\n",
-    "* Desde una terminal diríjase al directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
-    "* Ejecute el siguiente comando:\n",
+    "#### Carga del entorno.\n",
     "\n",
+    "* En caso de que se acceda a la terminal de la máquina virtual proporcionada por *Pythonista<sup>®</sup>*, es necesario cargar el entormno con el siguiente comando.\n",
+    "\n",
+    "```\n",
+    "source ~/pythonista/bin/activate\n",
+    "```\n",
+    "#### Inicio del servidor.\n",
+    "\n",
+    "* Desde la terminal ubicar el shell en el directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
     "\n",
     "```\n",
     "python manage.py runserver 0.0.0.0:8000\n",
@@ -628,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
