--- a/06_peticiones_y_respuestas.ipynb
+++ b/06_peticiones_y_respuestas.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "La referencia a estas clases puede ser consultada desde la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/request-response/"
+    "https://docs.djangoproject.com/en/3.1/ref/request-response/"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "* ```COOKIES```: contiene un objeto tipo ```dict``` con las cookies enviadas en la petición.\n",
     "* ```FILES```: contiene un diccionario con los datos de los archivos enviados en la petición.\n",
     "* ```META```: Contiene un objeto tipo ```dict``` con una serie de datos los cuales pueden ser consultados en \n",
-    "https://docs.djangoproject.com/en/3.0/ref/request-response/#django.http.HttpRequest.META.\n",
+    "https://docs.djangoproject.com/en/3.1/ref/request-response/#django.http.HttpRequest.META.\n",
     "* ```GET```: contiene un objeto de clase ```django.http.QueryDict``` con los parámetros enviados mediante el método ```GET```.\n",
     "* ```POST```: contiene un objeto de clase ```django.http.QueryDict``` con los parámetros enviados mediante el método ```POST```.\n",
     "\n",
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para las plataformas Linux y MacOS X. "
+    "* Para las plataformas *GNU/Linux* y *MacOS X*. "
    ]
   },
   {
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma Windows."
+    "* Para la plataforma *Windows*."
    ]
   },
   {
@@ -222,11 +222,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Arranque desde una terminal.\n",
+    "## Arranque del servicio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### arranque desde la *notebook*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python manage.py runserver 0.0.0.0:8000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nota:** Es necesario interrumpir el *kernel* de la *notebook* para terminar la ejecución del servidor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arranque desde una terminal.\n",
     "\n",
-    "* Desde una terminal diríjase al directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
-    "* Ejecute el siguiente comando:\n",
+    "#### Carga del entorno.\n",
     "\n",
+    "* En caso de que se acceda a la terminal de la máquina virtual proporcionada por *Pythonista<sup>®</sup>*, es necesario cargar el entormno con el siguiente comando.\n",
+    "\n",
+    "```\n",
+    "source ~/pythonista/bin/activate\n",
+    "```\n",
+    "#### Inicio del servidor.\n",
+    "\n",
+    "* Desde la terminal ubicar el shell en el directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
     "\n",
     "```\n",
     "python manage.py runserver 0.0.0.0:8000\n",
@@ -285,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
