--- a/08_json_con_django.ipynb
+++ b/08_json_con_django.ipynb
@@ -41,9 +41,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El paquete ```json``` de Python.\n",
+    "## El paquete ```json``` de *Python*.\n",
     "\n",
-    "Este paquete ```json``` cuenta con una biblioteca de herramientas capaces transformar objetos de Python a cadenas de caracteres con una estructura apegada a *JSON* y viceversa."
+    "Este paquete ```json``` es parte de la biblioteca estándar de *Python* cuenta con herramientas capaces transformar objetos de *Python* a cadenas de caracteres con una estructura apegada a *JSON* y viceversa."
    ]
   },
   {
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para las plataformas basadas en GNU/Linux y MacOS X."
+    "* Para las plataformas basadas en *GNU/Linux* y *MacOS X*."
    ]
   },
   {
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma Windows."
+    "* Para la plataforma *Windows*."
    ]
   },
   {
@@ -441,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma Linux o MacOS X."
+    "* Para la plataforma *GNU/Linux* y *MacOS X*."
    ]
   },
   {
@@ -457,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma Windows."
+    "* Para la plataforma *Windows*."
    ]
   },
   {
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para las plataformas Linux y MacOS X."
+    "* Para las plataformas *GNU/Linux* y *MacOS X*."
    ]
   },
   {
@@ -519,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma Windows."
+    "* Para la plataforma *Windows*."
    ]
   },
   {
@@ -544,7 +544,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Es necesario iniciar el servidor."
+    "## Arranque del servicio web."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arranque desde la *notebook*."
    ]
   },
   {
@@ -553,18 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd tutorial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**ADVERTENCIAS:** \n",
-    "\n",
-    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
-    "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto ```8000```."
+    "%cd tutorial"
    ]
   },
   {
@@ -576,6 +572,45 @@
    "outputs": [],
    "source": [
     "!python manage.py runserver 0.0.0.0:8000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nota:** Es necesario interrumpir el *kernel* de la *notebook* para terminar la ejecución del servidor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arranque desde una terminal.\n",
+    "\n",
+    "#### Carga del entorno.\n",
+    "\n",
+    "* En caso de que se acceda a la terminal de la máquina virtual proporcionada por *Pythonista<sup>®</sup>*, es necesario cargar el entormno con el siguiente comando.\n",
+    "\n",
+    "```\n",
+    "source ~/pythonista/bin/activate\n",
+    "```\n",
+    "#### Inicio del servidor.\n",
+    "\n",
+    "* Desde la terminal ubicar el shell en el directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "\n",
+    "```\n",
+    "python manage.py runserver 0.0.0.0:8000\n",
+    "```\n",
+    "\n",
+    "**Nota:** \n",
+    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resultado."
    ]
   },
   {
@@ -612,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
