--- a/09_objetos_request_y_response.ipynb
+++ b/09_objetos_request_y_response.ipynb
@@ -29,30 +29,27 @@
    "source": [
     "## Notas preliminares sobre este capítulo.\n",
     "\n",
-    "Este capítulo está dividido en dos notebooks:\n",
-    "\n",
-    "* La parte teórica y del servidor, corresponde al presente documento.\n",
-    "(10_clases_de_django_http_cliente.ipynb).\n",
-    "\n",
-    "La notebook del cliente consume los recursos que el servidor que esta notebook despliega, por lo que es necesario que el servidor de Django de esta notebook esté en ejecución cuando la notebook del cliente se esté ejecutando."
+    "Este capítulo contiene al servicio web que será consumido por los comandos de la *notebook* [```10_objetos_request_y_response_cliente.ipynb```](10_objetos_request_y_response_cliente.ipynb), por lo que es necesario que el servidor de *Django* de esta *notebook* esté en ejecución cuando la *notebook* del cliente se esté ejecutando."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El paquete *django.http*.\n",
+    "## El paquete ```django.http```.\n",
     "\n",
     "Este paquete cuenta con herramientas diseñadas para gestionar las peticiones y repuestas más comunes de *HTTP*, incluyendo algunos mensajes de estado.\n",
     "\n",
     "En el capítulo [```06_peticiones_y_respuestas.ipynb```](06_peticiones_y_respuestas.ipynb) se describió brevemente:\n",
     "\n",
-    "* El modo en el que los datos de las peticiones (requests) enviadas por un cliente son recibidas por el servidor de *Django* y contenidas en objetos instanciados de la clase ```django.http.HttpRequest```.\n",
-    "* El modo en el que una función de vista  permite enviar una respuestas (responses) a un cliente por medio de una instancia de la clase ```django.http.HttpResponse```. \n",
+    "* El modo en el que los datos de las peticiones (*requests*) enviadas por un cliente son recibidas por el servidor de *Django* y contenidas en objetos instanciados de la clase ```django.http.HttpRequest```.\n",
+    "* El modo en el que una función de vista  permite enviar una respuestas (*responses*) a un cliente por medio de una instancia de la clase ```django.http.HttpResponse```. \n",
     "\n",
     "En este capítulo se explorarán a detalle algunos recursos del módulo ```django.http```, incluyendo más información sobre ```django.http.HttpRequest``` y ```django.http.HttpResponse```.\n",
     "\n",
-    "La referencia de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/request-response/."
+    "La referencia de este paquete puede ser consultada en:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/3.1/ref/request-response/"
    ]
   },
   {
@@ -87,18 +84,18 @@
     "\n",
     "#### Métodos de *cookies*.\n",
     "\n",
-    "* ```get_signed_cookie()``` recibe una cookie firmada."
+    "* ```get_signed_cookie()``` recibe una *cookie* firmada."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase *django.http.QueryDict*.\n",
+    "## La clase ```django.http.QueryDict```.\n",
     "\n",
     "Los atributos ```GET``` y ```PUT``` de la clase ```django.http.HtmlRequest``` son instancias de la clase ```django.http.QueryDict```.\n",
     "\n",
-    "La clase ```django.http.QueryDict``` es similar a un objeto tipo ```dict```, con la diferencia de que puede contener más de un elemento con el mismo identificador, el cual es guradado en un objeto de tipo ```list```.\n",
+    "La clase ```django.http.QueryDict``` es similar a un objeto tipo ```dict```, con la diferencia de que puede contener más de un objeto con la misma clave. Estos objetos con clave compartida son referidos dentro de en un objeto de tipo ```list```.\n",
     "\n",
     "La clase ```django.http.QueryDict``` es inmutable.\n",
     "\n",
@@ -142,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Detalles sobre la clase ```django.http.HttpResponse```.\n",
+    "## Detalles de la clase ```django.http.HttpResponse```.\n",
     "\n",
     "``` python\n",
     "django.http.HttpResponse(content='', content_type=None, status=200, reason=None, charset=None)\n",
@@ -153,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Métodos de *django.http.HttpResponse*.\n",
+    "### Métodos de ```django.http.HttpResponse```.\n",
     "\n",
     "#### Métodos de gestión.\n",
     "\n",
@@ -171,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Otras subclases de ```django.http.Reponse```."
+    "### Otras subclases de ```django.http.Reponse```."
    ]
   },
   {
@@ -189,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mensajes de estado.\n",
+    "## Clases  de mensajes de estado.\n",
     "\n",
     "####  Mensajes de reenvío (```300```).\n",
     "\n",
@@ -384,6 +381,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Arranque del servicio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arranque desde la *notebook*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!python manage.py runserver 0.0.0.0:8000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nota:** Es necesario interrumpir el *kernel* de la *notebook* para terminar la ejecución del servidor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arranque desde una terminal.\n",
+    "\n",
+    "#### Carga del entorno.\n",
+    "\n",
+    "* En caso de que se acceda a la terminal de la máquina virtual proporcionada por *Pythonista<sup>®</sup>*, es necesario cargar el entormno con el siguiente comando.\n",
+    "\n",
+    "```\n",
+    "source ~/pythonista/bin/activate\n",
+    "```\n",
+    "#### Inicio del servidor.\n",
+    "\n",
+    "* Desde la terminal ubicar el shell en el directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "\n",
+    "```\n",
+    "python manage.py runserver 0.0.0.0:8000\n",
+    "```\n",
+    "\n",
+    "**Nota:** \n",
+    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resultado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "http://localhost:8000/main/error"
    ]
   },
@@ -411,7 +481,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
    ]
   }
  ],
@@ -431,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
