--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Configuración de bases de datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIAS:** \n",
     "\n",
     "* Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas.\n",
@@ -30,7 +37,9 @@
     "* *Oracle*.\n",
     "* *SQLite*.\n",
     "\n",
-    "La referencia completa del usos de bases de datos de *Django* puede ser consultada en https://docs.djangoproject.com/en/3.0/ref/databases/\n",
+    "La referencia completa del usos de bases de datos de *Django* puede ser consultada en:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/3.1/ref/databases/\n",
     "\n",
     "Existen proyectos que pueden soportan la creaciór de modelos en bases de datos NoSQL, tales como [*djongo*](https://nesdis.github.io/djongo/), pero para este curso sólo se estudiarán las bases de datos relacionales soportadas por defecto."
    ]
@@ -148,7 +157,7 @@
     "\n",
     "Los parámetros que definen la conexión de una base de datos pueden ser consultados en la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/settings/#databases\n",
+    "https://docs.djangoproject.com/en/3.1/ref/settings/#databases\n",
     "\n",
     "Los parámetros más comunes son los siguientes:\n",
     "\n",
@@ -496,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
