--- a/11_el_shell_de_django.ipynb
+++ b/11_el_shell_de_django.ipynb
@@ -37,7 +37,7 @@
     "python manage.py shell\n",
     "```\n",
     "\n",
-    "Dicho comando ejecutará un shell, el cual estará configurado com las variables de entorno definidas en el archivo ```settings.py``` del proyecto."
+    "Dicho comando ejecutará un shell, el cual estará configurado con las variables de entorno definidas en el archivo ```settings.py``` del proyecto."
    ]
   },
   {
@@ -99,7 +99,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
    ]
   }
  ],
@@ -119,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
